# vrr

./: Cargo.toml  README.md  bacon.toml  flake.nix  run.sh
spec/: vrr.cfg  vrr.tla
src/: main.rs
